UtahLiveDataTest/src/objects/ReleaseNotes__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Release Notes.</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PostInstallScript__c</fullName>
        <description>&apos;Post install script&apos; will include small code snipplet. Suppose we have published new release and it will include org data or code change.By running this script we can achive necessary behaviour from user&apos;s org.</description>
        <label>Post Install Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <description>Release Date of Release Note.</description>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Framework</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>If admin want to make any updation in previous Release Note , then he can do so by using version number.</description>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GG Release Note</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Release Notes  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GG Release Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>